modified and added css,js to stack

--- a/Stack/stack.html
+++ b/Stack/stack.html
@@ -2,7 +2,7 @@
      <head>
     <title>Stack</title>
     <link rel="stylesheet" type="text/css" href="stackStyle.css" />
-    <script src="js/javaScript.js"></script>
+    <script src="js/stackJS.js"></script>
     </head>
     <body>
         <h1> Stack </h1>
